css/styles.css
body {
	font-family: serif;
	/* Set all font in the page to Helvetica with font formatting */
	font-size: 100%; /* Generally set the font-size to 100% in the body 
	                    - you can then change with em in the other areas */
	line-height: 1.7em; /* The line-height property in CSS controls the space 
	                       between lines of text. */
	color: #000000; /* Hex Color Black */
    background-color: #ECECEC;
    background-image: url('./Images/me.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;

}   
#content{
    width:80%;
    height:100%;
    float:right;
    padding: 3%;
}

h1{
    color:#232323;
    /* color:#516267; */
    font-size: 200%;
    text-decoration:underline;
    margin-bottom:15px;
    font-weight:bold;
}

h2{
    text-decoration:underline;
    font-size:150%;
}

.tab { text-indent:40px }



.but a:hover{
    background-color:#B7D1DA;
    color:#232323;
}

.nav-pills{
    color:#232323;
    font-weight:bold;
    --bs-nav-link-color:  #232323;
    --bs-nav-link-hover-color:  #B7D1DA;
    --bs-nav-pills-link-active-bg: #B7D1DA;
    --bs-nav-pills-link-active-color: #232323;
  }

.centered{
    justify-content:center; 
    text-align:center; 
    display:flex;
}

.centered a{
    margin:auto;
}

.secret{
    display:none;
}

figcaption {
    color: #232323;
    font-style: italic;
    text-align: center;
    position: absolute;
    bottom: 0px;
    
  }

.mobile{
    display:none;
}

hr{
    color:#DDDDDD;
}

#content hr{
    color:#232323;
   
}

.fade_in {

    -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein .5s; /* Firefox < 16 */
        -ms-animation: fadein .5s; /* Internet Explorer */
         -o-animation: fadein .5s; /* Opera < 12.1 */
            animation: fadein .5s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }

